# ae-roadmap

./: README.md
projects/01-ai-chatbot-cli/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
projects/01-ai-chatbot-cli/conversations/: .gitkeep
projects/01-ai-chatbot-cli/prompts/: system_prompts.json
projects/01-ai-chatbot-cli/src/: api_client.py  config.json  context.py  exceptions.py  history.py  main.py  prompt.py
projects/01-ai-chatbot-cli/src/command/: change_model_command.py  command.py  command_registry.py  list_conversations_command.py  load_conversation.py  mode_command.py  quit_command.py  save_conversation_command.py
projects/01-ai-chatbot-cli/src/factory/: provider_factory.py
projects/01-ai-chatbot-cli/src/strategy/: provider_strategy.py
projects/02-document-qa-rag/: .gitignore  README.md  main.py  pyproject.toml
projects/02-document-qa-rag/chroma/: chroma.sqlite3
projects/02-document-qa-rag/src/: chunker.py  document_loader.py  embeddings.py  exceptions.py  main.py  vector_store.py
projects/03-ai-research-agent/: README.md
projects/04-ai-saas-app/: README.md
